# helloalgorithm

./: .gitignore  README.md
20240621/: array.cpp  linked  linked_list.cc  linkedlist  list_vector.cc  listvector
20240623/: mystack.h  quene  stacktest.cc  testmyque  testmyque.cc
20240625/: maptest  testset  testset.cc
CmakeTutorial/ Step1/: CMakeLists.txt  TutorialConfig.h  TutorialConfig.h.in  tutorial.cpp
CmakeTutorial/Step2/: CMakeLists.txt  tutorial.cpp
CmakeTutorial/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  mysqrt.h
CmakeTutorial/Step3/: CMakeLists.txt
CmakeTutorial/Step4/: CMakeLists.txt
CmakeTutorial/Step4/MathFunctions/: CMakeLists.txt
CmakeTutorial/Step5/: CMakeLists.txt  tutorial.cpp
CmakeTutorial/Step5/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  mysqrt.cpp
Documents/: CMake Tutorial.md
Documents/LeetcodeTop100笔记/General Thought/: 回溯.md  贪心算法.md
HelloAlgorithm/: readme.md
HelloAlgorithm/20240621/: CMakeLists.txt  array  array-11  lindedlist  linked_list
HelloAlgorithm/20240623/: CMakeLists.txt  deque.cc  dquene  myque  myqueue.h  mystack  mystack.cc  quenetest.cc  stack
HelloAlgorithm/20240625/: CMakeLists.txt  testmap.cc  unorded  unordered.cc
HelloAlgorithm/20240704/: CMakeLists.txt  binarytree  binarytree.cc
LeetcodeTop100/: README.md  readme.md  start.sh
LeetcodeTop100/02_Double pointer/: 11_containerMostWater.cpp  15_3sum.cpp  CMakeLists.txt
LeetcodeTop100/03_Ordinaryarray/: 53_MaxSubArray.cpp  56_MergeIntervals.cpp
LeetcodeTop100/04_BinarySearch/: 33_RotatedSortArray.cpp  CMakeLists.txt
LeetcodeTop100/05_stack/: 20_ValidParentheses.cpp  739_dailyTemperatures.cpp
LeetcodeTop100/07_Backtracking/: 46_permutations.cpp
LeetcodeTop100/08_greedy/: 121_besttimestock.cpp  45_jumpgame2.cpp  CMakeLists.txt
LeetcodeTop100/09_linkedlist/: 141_Cycle_linkedlists.cpp  148_sortlist.cpp  206_reverselinkedlist.cpp  234_palindrome_linkedlists.cpp  2_addtownums.cpp
LeetcodeTop100/10_matrix/: 240_search2Dmatrix.cpp  48_rotateImage.cpp  54_sprial_matrix.cpp  73_set_matrix_zeroes.cpp  CMakeLists.txt
LeetcodeTop100/11_substr/: 239_slidingwinMax.cpp  560_sumequalK.cpp  76_minwindow.cpp  CMakeLists.txt
LeetcodeTop100/12_technique/: 136_SingleNumber.cpp  169_majorityelement.cpp  287_findDuplicatenum.cpp  31_nextPermutation.cpp  75_sortColor.cpp  CMakeLists.txt
LeetcodeTop100/13_heap/: 215_kthlargest_elemArray.cpp  347_Topk_frequElement.cpp  CMakeLists.txt
LeetcodeTop100/14_DynamicProgramming/: 118_pascaltriangle.cpp  70_climbingStairs.cpp  CMakeLists.txt
LeetcodeTop100/1_Hash/: 128_Longest_Consecutive_Sequence.cpp  1_twosum.cpp  CMakeLists.txt  GroupAnagrams.cpp
LeetcodeTop100/2_Double pointer/: 283_movezeros.cpp  CMakeLists.txt  groupanagrams.cpp
LeetcodeTop100/3_Ordinaryarray/: 189_rotatearray.cpp  238_ProductArray.cpp  CMakeLists.txt
LeetcodeTop100/4_BinarySearch/: 153_MimRotatArray.cpp  34_find_lastPos.cpp  35_SearchInsertPos.cpp  74_Search_2D_Matrix.cpp  CMakeLists.txt
LeetcodeTop100/5_stack/: 155_MinStack.cpp  20_ValidParentheses.cpp  394_decodeString.cpp  CMakeLists.txt
LeetcodeTop100/6_SlidingWindow/: 3_withoutrepstr.cpp  438_Allanagrams.cpp  CMakeLists.txt
LeetcodeTop100/7_Backtracking/: 131_palindromeoartition.cpp  17_phonenumstr.cpp  22_generateparentheses.cpp  39_combinesum.cpp  46_permutations.cpp  78_subsets.cpp  79_wordsearch.cpp  CMakeLists.txt
LeetcodeTop100/8_greedy/: 55_Jumpgame.cpp  763_partitionLables.cpp  CMakeLists.txt
LeetcodeTop100/9_linkedlist/: 160_intersectlinkedlists.cpp  19_removeNode.cpp  206_reverselinkedlist.cpp  21_merge_two_sorted_linkedlists.cpp  CMakeLists.txt
LeetcodeTop100/9_linkedlist/utils/: linkedlist.cpp
LeetcodeTop100/others/: CMakeLists.txt  array_498_DiagonalTraveser.cpp  array_59_SpiralMatrixII.cpp  array_66_PlusOne.cpp
LeetcodeTop100/others/Array/: 04_medianOfTowArrays.cpp  1343_NumberOfSubarray.cpp  154_FindMinSortedArrayII.cpp  162_FindPeekElement.cpp  167_TwoSumII.cpp  179_LargestNumber.cpp  209_MinimSize.cpp  217_ContainsDuplicate.cpp  26_removeDuplicatesArray.cpp  289_GameofLine.cpp  349_IntersectionOfTwoArray.cpp  350_intersection_TwoArray.cpp  374_GuessNumber.cpp  384_ShuffleAnArray.cpp  400_NthDigit.cpp  448_FindAllNumDispear.cpp  452_mimnumofArrows.cpp  506_RelativeRanks.cpp  50_Pow.cpp  561_ArrayPartition.cpp  57_insertinterval.cpp  643_MaximumAverage.cpp  69_sqrt.cpp  704_BinarySearch.cpp  713_SubarrayLessK.cpp  80_removeDuplicates.cpp  819_mostcommonword.cpp  81_SearchRotatedArray.cpp  852_PeakIndexMountainArray.cpp  912_SortAnArray.cpp  CMakeLists.txt  array_485_MaxConsecutiveOnes.cpp  array_724_FindOivotIndex.cpp
LeetcodeTop100/others/BasicAlgorithm/: 1400_ConstructKPalindromeStr.cpp  1450_NumberOfStudents.cpp  190_ReverseBits.cpp  1925_countsquare.cpp  23_MergekSortedLists.cpp  306_additive_number.cpp  338_CountingBits.cpp  371_SumofTwoInter.cpp  40_combinationsumII.cpp  435_NonoverlappingIntervals.cpp  455_AssignCookie.cpp  47_PermutationsII.cpp  494_targetNumber.cpp  504_Base7.cpp  51_NQueens.cpp  561_ArrayPartion.cpp  77_combinations.cpp  784_LetterCasePermulation.cpp  78_Subsets.cpp  860_LemondeChange.cpp  CMakeLists.txt
LeetcodeTop100/others/HashTable/: 12_integer2Roman.cpp  1941_CheckifAllCharEqual.cpp  41_FirstMissingPositive.cpp  705_DesignHashSet.cpp  706_DesignHashMap.cpp  CMakeLists.txt
LeetcodeTop100/others/Queue/: 225_ImplementStackuseQueue.cpp  622_DesignCircularQueue.cpp  CMakeLists.txt
LeetcodeTop100/others/String/: 14_LongestCommonPrefix.cpp  151_ReverseWords.cpp  344_ReverseString.cpp  38_countandSay.cpp  415_AddStrings.cpp  43_MultiplyStrings.cpp  557_ReverseWordsIII.cpp  71_simplifypath.cpp  91_decodeways.cpp  CMakeLists.txt
LeetcodeTop100/others/dynamicprogramming/: 62_uniquePaths.cpp  64_MimPathSum.cpp  CMakeLists.txt
LeetcodeTop100/others/stack/: 1047_removealladjacent.cpp  150_EvaluatereversePolishnotation.cpp  224_basicCalculatorHard.cpp  227_BasicCalculatorII.cpp  CMakeLists.txt
LeetcodeTop100/utils/: CMakeLists.txt  vectorcmp.cpp  vectorcmp.h
others/: googletest Usage.md
(+7 files in other folders)
